@@ -1,29 +1,25 @@
 #
-# Declare the sub-directories to be built here
-#
-
-SUBDIRS = \
-	$(EOLIST)
-
-#
-# Get the 'head' of the build environment.  This includes default targets and
-# paths to tools
-#
-
-include $(AP_WORK)\build\NWGNUhead.inc
-
-#
-# build this level's files
-
-#
 # Make sure all needed macro's are defined
 #
+
+#
+# Get the 'head' of the build environment if necessary.  This includes default
+# targets and paths to tools
+#
+
+ifndef EnvironmentDefined
+include $(AP_WORK)\build\NWGNUhead.inc
+endif
 
 #
 # These directories will be at the beginning of the include list, followed by
 # INCDIRS
 #
 XINCDIRS	+= \
+			$(APR)/include \
+			$(APRUTIL)/include \
+			$(AP_WORK)/include \
+			$(NWOS) \
 			$(EOLIST)
 
 #
@@ -95,19 +91,19 @@ endif
 # This is used by the link 'name' directive to name the nlm.  If left blank
 # TARGET_nlm (see below) will be used.
 #
-NLM_NAME	=
+NLM_NAME	= allowmethods
 
 #
 # This is used by the link '-desc ' directive.
 # If left blank, NLM_NAME will be used.
 #
-NLM_DESCRIPTION	=
+NLM_DESCRIPTION	= Apache $(VERSION_STR) Method Restriction Module
 
 #
 # This is used by the '-threadname' directive.  If left blank,
 # NLM_NAME Thread will be used.
 #
-NLM_THREAD_NAME	=
+NLM_THREAD_NAME	= Allowmethods Module
 
 #
 # If this is specified, it will override VERSION value in
@@ -118,18 +114,18 @@ NLM_VERSION	=
 #
 # If this is specified, it will override the default of 64K
 #
-NLM_STACK_SIZE	=
+NLM_STACK_SIZE	= 8192
 
 
 #
 # If this is specified it will be used by the link '-entry' directive
 #
-NLM_ENTRY_SYM	=
+NLM_ENTRY_SYM	= _LibCPrelude
 
 #
 # If this is specified it will be used by the link '-exit' directive
 #
-NLM_EXIT_SYM	=
+NLM_EXIT_SYM	= _LibCPostlude
 
 #
 # If this is specified it will be used by the link '-check' directive
@@ -139,7 +135,7 @@ NLM_CHECK_SYM	=
 #
 # If these are specified it will be used by the link '-flags' directive
 #
-NLM_FLAGS	=
+NLM_FLAGS	= AUTOUNLOAD, PSEUDOPREEMPTION
 
 #
 # If this is specified it will be linked in with the XDCData option in the def
@@ -152,27 +148,8 @@ XDCDATA		=
 # If there is an NLM target, put it here
 #
 TARGET_nlm = \
-	$(OBJDIR)/authbasc.nlm \
-	$(OBJDIR)/authdigt.nlm \
-	$(OBJDIR)/authform.nlm \
-	$(OBJDIR)/authnano.nlm \
-	$(OBJDIR)/authndbd.nlm \
-	$(OBJDIR)/authndbm.nlm \
-	$(OBJDIR)/authnfil.nlm \
-	$(OBJDIR)/authnsocache.nlm \
-	$(OBJDIR)/authzdbd.nlm \
-	$(OBJDIR)/authzdbm.nlm \
-	$(OBJDIR)/authzgrp.nlm \
-	$(OBJDIR)/authzusr.nlm \
 	$(OBJDIR)/allowmethods.nlm \
-	$(OBJDIR)/accesscompat.nlm \
 	$(EOLIST)
-
-# If LDAPSDK has been defined then build the authnz_ldap module
-ifneq "$(LDAPSDK)" ""
-TARGET_nlm += $(OBJDIR)/authnzldap.nlm \
-	$(EOLIST)
-endif
 
 #
 # If there is an LIB target, put it here
@@ -185,6 +162,7 @@ TARGET_lib = \
 # Paths must all use the '/' character
 #
 FILES_nlm_objs = \
+	$(OBJDIR)/mod_allowmethods.o \
 	$(EOLIST)
 
 #
@@ -192,6 +170,7 @@ FILES_nlm_objs = \
 # These will be added as a library command in the link.opt file.
 #
 FILES_nlm_libs = \
+	libcpre.o \
 	$(EOLIST)
 
 #
@@ -199,6 +178,8 @@ FILES_nlm_libs = \
 # These will be added as a module command in the link.opt file.
 #
 FILES_nlm_modules = \
+	aprlib \
+	libc \
 	$(EOLIST)
 
 #
@@ -220,12 +201,16 @@ FILE_nlm_copyright =
 # Any additional imports go here
 #
 FILES_nlm_Ximports = \
+	@$(APR)/aprlib.imp \
+	@$(NWOS)/httpd.imp \
+	@libc.imp \
 	$(EOLIST)
 
 #
 # Any symbols exported to here
 #
 FILES_nlm_exports = \
+	allowmethods_module \
 	$(EOLIST)
 
 #
@@ -248,7 +233,6 @@ nlms :: libs $(TARGET_nlm)
 # correct place.  (See $(AP_WORK)\build\NWGNUhead.inc for examples)
 #
 install :: nlms FORCE
-	copy $(OBJDIR)\*.nlm $(INSTALL)\$(BASEDIR)\modules\*.*
 
 #
 # Any specialized rules here
