@@ -6,6 +6,10 @@ Changes with Apache 2.3.9
      Fix a denial of service attack against mod_reqtimeout.
      [Stefan Fritsch]
 
+  *) mod_allowmethods: New module to deny certain HTTP methods without
+     interfering with authentication/authorization. [Paul Querna,
+     Igor Galić, Stefan Fritsch]
+
   *) core: Log a warning if <Limit> or <LimitExcept> are used. They are
      deprecated and may go away in 2.4. [Stefan Fritsch]
 
